--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -13,10 +13,9 @@
   <script>
     WebFont.load({
       google: {
-        families: ["Montserrat:400,700","Varela Round:400","Varela:400"]
+        families: ["Montserrat:400,700","Oswald:300,400,700","Varela Round:400","Varela:400"]
       }
     });
-  </script>
   <script>
     if (/mobile/i.test(navigator.userAgent)) document.documentElement.className += ' w-mobile';
   </script>
@@ -28,7 +27,7 @@
   <div class="w-nav" data-collapse="medium" data-animation="default" data-duration="400" data-contain="1">
     <div class="w-container menu_bar" id="toppage">
       <a class="w-nav-brand" href="homescreen">
-        <img class="menu_icon" src="images/hourglass.jpg" width="60">
+        <img class="menu_icon" src="images/hourglass.png" width="60">
       </a>
       <nav class="w-nav-menu" role="navigation"><a class="w-nav-link menu_dropitem" href="homescreen">HOME</a><a class="w-nav-link menu_dropitem" href="faqs">FAQs</a><a class="w-nav-link menu_dropitem" href="about">ABOUT</a><a class="w-nav-link menu_dropitem" href="contactus">CONTACT US</a>
       </nav>
@@ -48,7 +47,7 @@
       <div class="contact_title">TIMEKEEPER</div>
       <p class="contact_info">This is THE&nbsp;optimal scheduling app. What is Timekeeper, you ask? Why, it's this little handy app that monitors your day-to-day schedule to provide you with the best possible schedule for your everyday to-dos.&nbsp;
         <br>Just simply put in the tasks you need to do and we'll do the rest.</p>
-      <img class="contact_hour" src="images/hourglass.jpg" width="135">
+      <img class="contact_hour" src="images/hourglass.png" width="135">
     </div>
     <div class="w-container">
       <div class="contact_title">So who's behind this?&nbsp;</div>
