--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,7 +13,7 @@
   <script>
     WebFont.load({
       google: {
-        families: ["Montserrat:400,700","Varela Round:400","Varela:400"]
+        families: ["Montserrat:400,700","Oswald:300,400,700","Varela Round:400","Varela:400"]
       }
     });
   </script>
@@ -35,7 +35,7 @@
             </a>
           </div>
           <a class="w-inline-block" href="#intro">
-            <img class="logo" src="images/hourglass.jpg" width="80">
+            <img class="logo" src="images/hourglass.png" width="80">
           </a>
         </div>
         <nav class="w-col w-col-6 nav-column login_buttons"><a class="button nav login_button" href="signup">Sign Up</a><a class="button nav login_button" href="loginpage">Log in</a>
