--- a/views/contactus.handlebars
+++ b/views/contactus.handlebars
@@ -13,7 +13,7 @@
   <script>
     WebFont.load({
       google: {
-        families: ["Montserrat:400,700","Varela Round:400","Varela:400"]
+        families: ["Montserrat:400,700","Oswald:300,400,700","Varela Round:400","Varela:400"]
       }
     });
   </script>
@@ -28,7 +28,7 @@
   <div class="w-nav" data-collapse="medium" data-animation="default" data-duration="400" data-contain="1">
     <div class="w-container menu_bar" id="toppage">
       <a class="w-nav-brand" href="homescreen">
-        <img class="menu_icon" src="images/hourglass.jpg" width="60">
+        <img class="menu_icon" src="images/hourglass.png" width="60">
       </a>
       <nav class="w-nav-menu" role="navigation"><a class="w-nav-link menu_dropitem" href="homescreen">HOME</a><a class="w-nav-link menu_dropitem" href="faqs">FAQs</a><a class="w-nav-link menu_dropitem" href="about">ABOUT</a><a class="w-nav-link menu_dropitem" href="contactus">CONTACT US</a>
       </nav>
@@ -56,7 +56,7 @@
         <br>9450 Gilman Drive #45344, La Jolla CA 92092</p>
     </div>
     <div class="w-container">
-      <img class="contact_hour" src="images/hourglass.jpg" width="165">
+      <img class="contact_hour" src="images/hourglass.png" width="165">
       <div class="feedback_text">We would love to hear your feedback!</div>
       <div class="w-form">
         <form class="contact_form" name="email-form" data-name="Email Form">
