--- a/views/currenttask.handlebars
+++ b/views/currenttask.handlebars
@@ -19,7 +19,7 @@
   <script>
     WebFont.load({
       google: {
-        families: ["Montserrat:400,700","Varela Round:400","Varela:400"]
+        families: ["Montserrat:400,700","Oswald:300,400,700","Varela Round:400","Varela:400"]
       }
     });
   </script>
@@ -36,7 +36,7 @@
   <div class="w-nav menu_navbar" data-collapse="medium" data-animation="default" data-duration="400" data-contain="1">
     <div class="w-container menu_bar" id="toppage">
       <a class="w-nav-brand" href="homescreen.html">
-        <img class="menu_icon" src="images/hourglass.jpg" width="60">
+        <img class="menu_icon" src="images/hourglass.png" width="60">
       </a>
       <nav class="w-nav-menu" role="navigation"><a class="w-nav-link menu_dropitem" href="homescreen">HOME</a><a class="w-nav-link menu_dropitem" href="faqs">FAQs</a><a class="w-nav-link menu_dropitem" href="about">ABOUT</a><a class="w-nav-link menu_dropitem" href="contactus">CONTACT US</a>
       </nav>
