--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -13,7 +13,7 @@
   <script>
     WebFont.load({
       google: {
-        families: ["Montserrat:400,700","Varela Round:400","Varela:400"]
+        families: ["Montserrat:400,700","Oswald:300,400,700","Varela Round:400","Varela:400"]
       }
     });
   </script>
