--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -86,7 +86,7 @@
       </div>
     </div>
     <a class="w-inline-block top_of_page" href="#toppage">
-      <img class="top_page_img" src="images/17493-up-black-arrow-design.png" width="40">
+      <img class="top_page_img" src="images/up_arrow_home.png" width="40">
     </a>
   </footer>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
