updated pics and css

--- a/views/addtask.handlebars
+++ b/views/addtask.handlebars
@@ -30,11 +30,11 @@
   <div class="w-nav" data-collapse="medium" data-animation="default" data-duration="400" data-contain="1">
     <div class="w-container menu_bar" id="toppage">
       <a class="w-nav-brand" href="homescreen">
-        <img class="menu_icon" src="images/hourglass.png" width="60">
+        <img class="menu_icon" src="images/hourglass.png" width="52">
       </a>
-      <nav class="w-nav-menu" role="navigation"><a class="w-nav-link menu_dropitem" href="homescreen">HOME</a><a class="w-nav-link menu_dropitem" href="faqs">FAQs</a><a class="w-nav-link menu_dropitem" href="about">ABOUT</a><a class="w-nav-link menu_dropitem" href="contactus">CONTACT US</a>
+      <nav class="w-nav-menu nav-menu" role="navigation"><a class="w-nav-link menu_dropitem" href="homescreen">HOME</a><a class="w-nav-link menu_dropitem" href="faqs">FAQs</a><a class="w-nav-link menu_dropitem" href="about">ABOUT</a><a class="w-nav-link menu_dropitem" href="contactus">CONTACT US</a>
       </nav>
-      <div class="w-nav-button">
+      <div class="w-nav-button menu-button">
         <div class="w-icon-nav-menu"></div>
       </div>
     </div>
@@ -64,7 +64,7 @@
           <option value="120min">120 min</option>
         </select>
         <div class="w-clearfix form-background"><a class="close-form" href="#">CLOSE</a>
-          <label class="signup_info" for="location">LOCATION (OPTIONAL):</label>
+          <label class="signup_info1" for="location">LOCATION (OPTIONAL):</label>
           <input class="w-input signup_textfield" type="text" id="location" name="location" data-name="location"></input>
           <label class="signup_info" for="priority">LEVEL OF PRIORITY (OPTIONAL):</label>
           <select class="w-select signup_textfield" id="priority" name="dropdown">
@@ -104,7 +104,7 @@
   <div>
     <div class="w-container">
       <a class="w-inline-block top_of_page" href="#toppage">
-        <img class="top_page_img" src="images/up_arrow.png" width="40">
+        <img class="top_page_img" src="images/up_arrow.png" width="45" height="35">
       </a>
     </div>
   </div>
