--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -86,9 +86,12 @@
       </div>
     </div>
     <a class="w-inline-block top_of_page" href="#toppage">
-      <img class="top_page_img" src="images/up_arrow_home.png" width="40">
+      <img class="top_page_img" src="images/up_arrow.png" width="45" height="35">
     </a>
   </footer>
+  <div>
+    <div class="bottom_text">2014, Timekeeper, inc. All rights reserved.</div>
+  </div>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script type="text/javascript" src="js/webflow.js"></script>
 </body>
