--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -28,11 +28,11 @@
   <div class="w-nav" data-collapse="medium" data-animation="default" data-duration="400" data-contain="1">
     <div class="w-container menu_bar" id="toppage">
       <a class="w-nav-brand" href="homescreen">
-        <img class="menu_icon" src="images/hourglass.png" width="60">
+        <img class="menu_icon" src="images/hourglass.png" width="52">
       </a>
-      <nav class="w-nav-menu" role="navigation"><a class="w-nav-link menu_dropitem" href="homescreen">HOME</a><a class="w-nav-link menu_dropitem" href="faqs">FAQs</a><a class="w-nav-link menu_dropitem" href="about">ABOUT</a><a class="w-nav-link menu_dropitem" href="contactus">CONTACT US</a>
+      <nav class="w-nav-menu nav-menu" role="navigation"><a class="w-nav-link menu_dropitem" href="homescreen">HOME</a><a class="w-nav-link menu_dropitem" href="faqs">FAQs</a><a class="w-nav-link menu_dropitem" href="about">ABOUT</a><a class="w-nav-link menu_dropitem" href="contactus">CONTACT US</a>
       </nav>
-      <div class="w-nav-button">
+      <div class="w-nav-button menu-button">
         <div class="w-icon-nav-menu"></div>
       </div>
     </div>
@@ -90,6 +90,9 @@
         <div class="w-form-fail"></div>
       </div><a class="button logout_button" href="/">LOG OUT</a> <!-- BLK -->
     </div>
+  </div>
+  <div>
+    <div class="bottom_text">2014, Timekeeper, inc. All rights reserved.</div>
   </div>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script type="text/javascript" src="js/webflow.js"></script>
