--- a/public/css/timekeeper-b.webflow.css
+++ b/public/css/timekeeper-b.webflow.css
@@ -509,7 +509,15 @@ p {
   }
   .button.checktask_delete.confirm-link {
     width: 120px;
-    margin-left: 10px;
+    height: 45px;
+    margin-bottom: 9px;
+    margin-left: 0px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    border-radius: 0px;
+    font-family: Oswald, sans-serif;
+    font-size: 20px;
+    letter-spacing: 0px;
   }
   .button.confirm_yes {
     margin-right: 5px;
@@ -537,15 +545,19 @@ p {
   }
   .button.edit_task {
     width: 120px;
+    height: 45px;
     margin-right: auto;
     margin-bottom: 5px;
-    margin-left: 10px;
-    padding: 5px 0px;
+    margin-left: 5px;
+    padding: 12px 0px;
     float: none;
+    border-radius: 0px;
     background-color: #3c528f;
-    font-size: 16px;
+    font-family: Oswald, sans-serif;
+    font-size: 20px;
     font-weight: 400;
     text-align: center;
+    letter-spacing: 0px;
   }
   .button.edit_task:active {
     background-color: #5a7cdb;
@@ -688,7 +700,7 @@ p {
     padding-left: 0px;
     font-family: Oswald, sans-serif;
     color: white;
-    font-size: 20px;
+    font-size: 17px;
     line-height: 20px;
     font-weight: 400;
     letter-spacing: 0px;
@@ -994,6 +1006,7 @@ p {
     padding-left: 10px;
   }
   .contact_label {
+    margin-top: 20px;
     font-family: Oswald, sans-serif;
     color: white;
     font-size: 20px;
@@ -1175,7 +1188,7 @@ p {
     display: none;
     margin-right: 5px;
     margin-left: 5px;
-    border-radius: 7px;
+    border-radius: 0px;
     background-color: rgba(18, 18, 18, 0.98);
   }
   .modal-window {
@@ -1193,27 +1206,28 @@ p {
   }
   .close-modal {
     display: block;
-    margin-right: auto;
-    margin-left: auto;
+    margin-right: 0px;
+    margin-left: 0px;
     padding-top: 0px;
     padding-bottom: 0px;
+    padding-left: 0px;
     float: right;
     background-color: transparent;
-    font-family:'Varela Round', sans-serif;
-    color: white;
-    font-size: 11px;
-    letter-spacing: -1px;
+    font-family: Oswald, sans-serif;
+    color: rgba(255, 255, 255, 0.49);
+    font-size: 15px;
+    letter-spacing: 0px;
     text-decoration: none;
   }
   .checktask-background {
     position: fixed;
     left: 5px;
-    top: 165px;
+    top: 180px;
     right: 5px;
     bottom: auto;
     z-index: 3;
     display: none;
-    border-radius: 7px;
+    border-radius: 0px;
     background-color: rgba(23, 23, 23, 0.98);
   }
   .checktask-window {
@@ -1225,14 +1239,19 @@ p {
   }
   .checktask_h {
     margin-top: 2px;
-    font-family: Montserrat, sans-serif;
-    font-size: 14px;
+    font-family: Oswald, sans-serif;
+    font-size: 15px;
     font-weight: 400;
-    letter-spacing: -1px;
+    letter-spacing: 0px;
     text-transform: uppercase;
   }
   .close-checktask {
     display: block;
+    margin-top: 2px;
+    font-family: Oswald, sans-serif;
+    color: rgba(255, 255, 255, 0.49);
+    font-size: 15px;
+    letter-spacing: -1px;
   }
   .confirm-background {
     position: fixed;
@@ -1357,7 +1376,7 @@ p {
     padding-right: 0px;
     padding-left: 0px;
     color: #a3a8b6;
-    font-size: 13px;
+    font-size: 12px;
     line-height: 15px;
     text-align: left;
     letter-spacing: 0px;
@@ -1367,6 +1386,7 @@ p {
     margin: 0px auto;
     padding-right: 0px;
     padding-left: 0px;
+    font-family:'Trebuchet MS', Helvetica, Arial, sans-serif;
     color: #a3a8b6;
     font-size: 13px;
     line-height: 15px;
@@ -1448,7 +1468,24 @@ p {
     margin-top: 15px;
     font-family: Oswald, sans-serif;
     color: white;
-    font-size: 20px;
+    font-size: 17px;
+    font-weight: 400;
+    text-transform: uppercase;
+  }
+  .bottom_text {
+    margin-top: 35px;
+    font-family: Oswald, sans-serif;
+    color: rgba(255, 255, 255, 0.49);
+    font-size: 9px;
+    text-align: center;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+  }
+  .checktask_h1 {
+    margin-top: 25px;
+    margin-bottom: 0px;
+    font-family: Oswald, sans-serif;
+    font-size: 15px;
     font-weight: 400;
     text-transform: uppercase;
   }
