--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -16,6 +16,7 @@
         families: ["Montserrat:400,700","Oswald:300,400,700","Varela Round:400","Varela:400"]
       }
     });
+  </script>
   <script>
     if (/mobile/i.test(navigator.userAgent)) document.documentElement.className += ' w-mobile';
   </script>
@@ -27,11 +28,11 @@
   <div class="w-nav" data-collapse="medium" data-animation="default" data-duration="400" data-contain="1">
     <div class="w-container menu_bar" id="toppage">
       <a class="w-nav-brand" href="homescreen">
-        <img class="menu_icon" src="images/hourglass.png" width="60">
+        <img class="menu_icon" src="images/hourglass.png" width="52">
       </a>
-      <nav class="w-nav-menu" role="navigation"><a class="w-nav-link menu_dropitem" href="homescreen">HOME</a><a class="w-nav-link menu_dropitem" href="faqs">FAQs</a><a class="w-nav-link menu_dropitem" href="about">ABOUT</a><a class="w-nav-link menu_dropitem" href="contactus">CONTACT US</a>
+      <nav class="w-nav-menu nav-menu" role="navigation"><a class="w-nav-link menu_dropitem" href="homescreen">HOME</a><a class="w-nav-link menu_dropitem" href="faqs">FAQs</a><a class="w-nav-link menu_dropitem" href="about">ABOUT</a><a class="w-nav-link menu_dropitem" href="contactus">CONTACT US</a>
       </nav>
-      <div class="w-nav-button">
+      <div class="w-nav-button menu-button">
         <div class="w-icon-nav-menu"></div>
       </div>
     </div>
@@ -64,7 +65,7 @@
   <div>
     <div class="w-container">
       <a class="w-inline-block top_of_page" href="#toppage">
-        <img class="top_page_img" src="images/up_arrow.png" width="40">
+        <img class="top_page_img" src="images/up_arrow.png" width="45" height="35">
       </a>
     </div>
   </div>
