--- a/views/currenttask.handlebars
+++ b/views/currenttask.handlebars
@@ -36,11 +36,11 @@
   <div class="w-nav menu_navbar" data-collapse="medium" data-animation="default" data-duration="400" data-contain="1">
     <div class="w-container menu_bar" id="toppage">
       <a class="w-nav-brand" href="homescreen.html">
-        <img class="menu_icon" src="images/hourglass.png" width="60">
+        <img class="menu_icon" src="images/hourglass.png" width="52">
       </a>
-      <nav class="w-nav-menu" role="navigation"><a class="w-nav-link menu_dropitem" href="homescreen">HOME</a><a class="w-nav-link menu_dropitem" href="faqs">FAQs</a><a class="w-nav-link menu_dropitem" href="about">ABOUT</a><a class="w-nav-link menu_dropitem" href="contactus">CONTACT US</a>
+      <nav class="w-nav-menu nav-menu" role="navigation"><a class="w-nav-link menu_dropitem" href="homescreen">HOME</a><a class="w-nav-link menu_dropitem" href="faqs">FAQs</a><a class="w-nav-link menu_dropitem" href="about">ABOUT</a><a class="w-nav-link menu_dropitem" href="contactus">CONTACT US</a>
       </nav>
-      <div class="w-nav-button">
+      <div class="w-nav-button menu-button">
         <div class="w-icon-nav-menu"></div>
       </div>
     </div>
@@ -78,7 +78,7 @@
   <div>
     <div class="w-container">
       <a class="w-inline-block top_of_page" href="#toppage">
-        <img class="top_page_img" src="images/up_arrow.png" width="40">
+        <img class="top_page_img" src="images/up_arrow.png" width="45" height="35">
       </a>
     </div>
   </div>
@@ -92,8 +92,8 @@
       <div class="w-clearfix checktask-window"><a class="close-checktask" href="#">CLOSE</a>
         <ul class="w-list-unstyled">
           <li>
-            <!-- <h4 class="checktask_h">NAME OF TASK:&nbsp;{{taskname}}</h4> -->
-            <h4 class="checktask_h">NAME OF TASK:&nbsp;WORK OUT AT RIMAC</h4>
+            <!-- <h4 class="checktask_h1">NAME OF TASK:&nbsp;{{taskname}}</h4> -->
+            <h4 class="checktask_h1">NAME OF TASK:&nbsp;WORK OUT AT RIMAC</h4>
             <p class="task_input"></p>
           </li>
           <li>
