--- a/views/loginpage.handlebars
+++ b/views/loginpage.handlebars
@@ -39,6 +39,9 @@
       <p class="login_errormessage">Oops! Your username or password is incorrect.</p>
     </div>
   </div>
+  <div>
+    <div class="bottom_text">2014, Timekeeper, inc. All rights reserved.</div>
+  </div>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script type="text/javascript" src="js/webflow.js"></script>
 </body>
