--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -41,6 +41,9 @@
       <p class="signup_errormessage">Oops! That username is already taken :(</p>
     </div>
   </div>
+  <div>
+    <div class="bottom_text">2014, Timekeeper, inc. All rights reserved.</div>
+  </div>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script type="text/javascript" src="js/webflow.js"></script>
 </body>
