--- a/views/faqs.handlebars
+++ b/views/faqs.handlebars
@@ -44,17 +44,17 @@
   </div>
   <div class="w-container">
     <div class="help_texttitle">So how does this work exactly?</div>
-    <p class="help_paragraph">Timekeeper works like so: list the tasks you have to do for the day, watch the application crank out the most optimal schedule, and just follow step-by-step. You can view your schedule at any time, and you'll get constant notifications to let you
-      know when you should be doing something. Then watch your tasks for the day disappear one by one!</p>
+    <p class="help_paragraph">Timekeeper works like so: list the to-dos you have to do for the day, watch the application crank out the most optimal schedule, and just follow step-by-step. You can view your schedule at any time, and you'll get constant notifications to let you
+      know when you should be doing something. Then watch your to-dos for the day disappear one by one!</p>
     <div>
       <div class="w-slider" data-animation="slide" data-duration="400" data-infinite="1">
         <div class="w-slider-mask help_mask">
           <div class="w-slide" width="680">
-            <h5 class="slider_heading">Log in, and you'll be directed to the homescreen where you can add tasks, check your schedule, or configure settings.</h5>
+            <h5 class="slider_heading">Log in, and you'll be directed to the homescreen where you can add to-dos, check your daily calendar, or change your preferences.</h5>
             <img class="help_image" src="images/homescreen.jpg" width="220">
           </div>
           <div class="w-slide">
-            <h5 class="slider_heading">You can add tasks to your current task list, and change things such as estimated time of completion, location, and priority.</h5>
+            <h5 class="slider_heading">You can add to-dos to your to-do list, and change things such as estimated time of completion, location, and priority.</h5>
             <img class="help_image" src="images/add_current_task.jpg" width="220">
           </div>
           <div class="w-slide">
@@ -67,7 +67,7 @@
     </div>
     <div class="help_texttitle">How does Timekeeper know what the most optimal schedule is for me?</div>
     <p class="help_paragraph">Sorry it's a trade secret and we're not allowed to disclose any of that information...oops.
-      <br>What we will tell you though is Timekeeper does a lot of "behind the scenes" work, and tracks how frequently you go on certain websites. Our algorithm then cranks out a schedule the follows your daily work/play patterns...and voila!</p>
+      <br>What we will tell you though is Timekeeper does a lot of "behind the scenes" work, and tracks how frequently you go on certain websites. Our algorithm then cranks out a daily calendar the follows your work/play patterns...and voila!</p>
     <div class="help_texttitle">Is the schedule day-to-day only, or can you plan things for an entire month?</div>
     <p class="help_paragraph">Timekeeper only works on a day-to-day &nbsp;basis. Unlike other calender apps (such as Google Calendar), we focus on making sure you get the most done each and everyday. The importance of a good schedule comes with being efficient with your time,
       and we hope that utilizing the hours in a day in the best way possible gives you the ability to finish anything and everything you set to accomplish.&nbsp;</p>
