--- a/views/homescreen.handlebars
+++ b/views/homescreen.handlebars
@@ -42,11 +42,11 @@
     <div class="homescreen_description">Hello there! If you're having trouble, click on the menu bar at the top!</div>
   </div>
   <ul class="homemenu">
-    <li><a class="button homescreen_button" href="currenttask">CURRENT&nbsp;TASKS</a>
+    <li><a class="button homescreen_button" href="currenttask">TO-DOs</a>
     </li>
-    <li><a class="button homescreen_button" href="todayschedule">TODAY'S SCHEDULE</a>
+    <li><a class="button homescreen_button" href="todayschedule">DAILY CALENDAR</a>
     </li>
-    <li><a class="button homescreen_button" href="settings">SETTINGS</a>
+    <li><a class="button homescreen_button" href="settings">PREFERENCES</a>
     </li>
   </ul>
   <div>
