--- a/views/todayschedule.handlebars
+++ b/views/todayschedule.handlebars
@@ -4,7 +4,7 @@
 <html data-wf-site="5300606dbecf5c650700012b">
 <head>
   <meta charset="utf-8">
-  <title>Timekeeper -Today's Schedule</title>
+  <title>Timekeeper -Daily Calendar</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/webflow.css">
@@ -39,7 +39,7 @@
   </div>
   <div>
     <div class="w-container">
-      <h1 class="company">TODAY'S &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;SCHEDULE</h1>
+      <h1 class="company">DAILY &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;CALENDAR</h1>
       <div class="currentschedule_description">Get on finishing your tasks for the day!&nbsp;</div>
     </div>
   </div>
@@ -70,11 +70,7 @@
       $('.close-checktask').click(function() {
         $('.checktask-background').fadeOut();
       });
-    });
-  </script>
-  <!-- modal window for checking tasks -->
-  <script type="text/javascript">
-    $(document).ready(function() {
+
       $('.checktasktime-link').click(function() {
         $('.checktask-background').fadeIn();
       });
