--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -39,8 +39,8 @@
   </div>
   <div class="w-container">
     <div>
-      <h1 class="company">Settings</h1>
-      <div class="settings_description">Change the settings to accommodate the way your schedule works!</div>
+      <h1 class="company">Preferences</h1>
+      <div class="settings_description">Change the preferences to accommodate the way your schedule works!</div>
     </div>
   </div>
   <div>
@@ -88,11 +88,18 @@
           <p>Thank you! Your submission has been received!</p>
         </div>
         <div class="w-form-fail"></div>
-      </div><a class="button logout_button" href="/">LOG OUT</a> <!-- BLK -->
+      </div><a class="button logout_button">LOG OUT</a> <!-- BLK -->
     </div>
   </div>
   <div>
     <div class="bottom_text">2014, Timekeeper, inc. All rights reserved.</div>
+  </div>
+
+  <!-- do you want to logout -->
+  <div class="logout-background">
+    <div class="w-clearfix logout-window">
+      <div class="logout_text">Are you sure?</div><a class="button logout_yes" href="index">YES</a><a class="button logout_no" href="#">NO</a>
+    </div>
   </div>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script type="text/javascript" src="js/webflow.js"></script>
@@ -105,6 +112,13 @@
       });
       $('.close-form').click(function() {
         $('.form-background').fadeOut();
+      });
+
+      $('.logout_button').click(function() {
+        $('.logout-background').fadeIn();
+      });
+      $('.logout_no').click(function() {
+        $('.logout-background').fadeOut();
       });
     });
   </script>
