--- a/views/faqs.handlebars
+++ b/views/faqs.handlebars
@@ -83,7 +83,14 @@
       <img class="top_page_img" src="images/up_arrow.png" width="45" height="35">
     </a>
   </div>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+
+  <!-- adding script files from lab5 -->
+  <script src="js/jquery-1.11.0.js"></script>
+  <script src="js/bootstrap.js"></script>
+  <script src="js/timekeeper.js"></script>
+
+  <!-- script file for webflow -->
   <script type="text/javascript" src="js/webflow.js"></script>
+  
 </body>
 </html>
