--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -101,8 +101,15 @@
       <div class="logout_text">Are you sure?</div><a class="button logout_yes" href="index">YES</a><a class="button logout_no" href="#">NO</a>
     </div>
   </div>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+
+  <!-- adding script files from lab5 -->
+  <script src="js/jquery-1.11.0.js"></script>
+  <script src="js/bootstrap.js"></script>
+  <script src="js/timekeeper.js"></script>
+
+  <!-- script file for webflow -->
   <script type="text/javascript" src="js/webflow.js"></script>
+  
 
   <!-- modal window for see more add task options -->
   <script type="text/javascript">
