--- a/views/homescreen.handlebars
+++ b/views/homescreen.handlebars
@@ -84,7 +84,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-48623566-3', 'timekeeper-b.herokuapp.com');
+  ga('create', 'UA-48623566-3', 'timekeeper-hci.herokuapp.com');
   ga('send', 'pageview');
 
   </script>
