--- a/views/currenttask.handlebars
+++ b/views/currenttask.handlebars
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <!-- title of the url page -->
-  <title>Timekeeper - TO-DOs</title>
+  <title>Timekeeper (Version B) - TO-DOs</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- files from lab 5 -->
