--- a/views/homescreen.handlebars
+++ b/views/homescreen.handlebars
@@ -20,7 +20,7 @@
   <!-- End of Google Analytics Content Experiment code -->
 
   <meta charset="utf-8">
-  <title>Timekeeper - Homescreen</title>
+  <title>Timekeeper (Version B) - Homescreen</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/webflow.css">
