--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -4,7 +4,7 @@
 <html data-wf-site="5300606dbecf5c650700012b">
 <head>
   <meta charset="utf-8">
-  <title>Timekeeper - About</title>
+  <title>Timekeeper (Version B) - About</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/webflow.css">
@@ -77,6 +77,6 @@
 
   <!-- script file for webflow -->
   <script type="text/javascript" src="js/webflow.js"></script>
-  
+
 </body>
 </html>
