--- a/views/addtask.handlebars
+++ b/views/addtask.handlebars
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <!-- title of the url page -->
-  <title>Timekeeper - Add TO-DO</title>
+  <title>Timekeeper (Version B) - Add TO-DO</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/webflow.css">
