--- a/views/contactus.handlebars
+++ b/views/contactus.handlebars
@@ -4,7 +4,7 @@
 <html data-wf-site="5300606dbecf5c650700012b">
 <head>
   <meta charset="utf-8">
-  <title>Timekeeper - Contact Us</title>
+  <title>Timekeeper (Version B) - Contact Us</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/webflow.css">
