--- a/views/homescreen.handlebars
+++ b/views/homescreen.handlebars
@@ -58,11 +58,11 @@
     <div class="homescreen_description">Hello there! If you're having trouble, click on the menu bar at the top!</div>
   </div>
   <ul class="homemenu">
-    <li><a class="button homescreen_button" href="currenttask">TO-DOs</a>
+    <li><a id="homescreen_button" class="button homescreen_button" href="currenttask">TO-DOs</a>
     </li>
-    <li><a class="button homescreen_button" href="todayschedule">DAILY CALENDAR</a>
+    <li><a id="homescreen_button" class="button homescreen_button" href="todayschedule">DAILY CALENDAR</a>
     </li>
-    <li><a class="button homescreen_button" href="settings">PREFERENCES</a>
+    <li><a id="homescreen_button" class="button homescreen_button" href="settings">PREFERENCES</a>
     </li>
   </ul>
   <div>
