--- a/views/currenttask.handlebars
+++ b/views/currenttask.handlebars
@@ -35,7 +35,7 @@
   <!-- nav bar the top of the page -->
   <div class="w-nav menu_navbar" data-collapse="medium" data-animation="default" data-duration="400" data-contain="1">
     <div class="w-container menu_bar" id="toppage">
-      <a class="w-nav-brand" href="homescreen.html">
+      <a class="w-nav-brand" href="homescreen">
         <img class="menu_icon" src="images/hourglass.png" width="52">
       </a>
       <nav class="w-nav-menu nav-menu" role="navigation"><a class="w-nav-link menu_dropitem" href="homescreen">HOME</a><a class="w-nav-link menu_dropitem" href="faqs">FAQs</a><a class="w-nav-link menu_dropitem" href="about">ABOUT</a><a class="w-nav-link menu_dropitem" href="contactus">CONTACT US</a>
