--- a/views/homescreen.handlebars
+++ b/views/homescreen.handlebars
@@ -4,7 +4,7 @@
 <html data-wf-site="5300606dbecf5c650700012b">
 <head>
 
-  <!-- Google Analytics Content Experiment code -->
+  <!-- Google Analytics Content Experiment code --> 
   <script>function utmx_section(){}function utmx(){}(function(){var
   k='82937095-1',d=document,l=d.location,c=d.cookie;
   if(l.search.indexOf('utm_expid='+k)>0)return;
@@ -84,7 +84,8 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-48623566-3', 'timekeeper-b.herokuapp.com/homescreen');
+  ga('create', 'UA-48623566-3', 'timekeeper-b.herokuapp.com');
+  //ga('create', 'UA-48623566-3', {'cookieDomain' : 'none'});
   ga('send', 'pageview');
 
   </script>
