--- a/views/homescreen.handlebars
+++ b/views/homescreen.handlebars
@@ -19,6 +19,22 @@
   </script><script>utmx('url','A/B');</script>
   <!-- End of Google Analytics Content Experiment code -->
 
+  <!-- Google Analytics Content Experiment code -->
+  <script>function utmx_section(){}function utmx(){}(function(){var
+  k='82942498-2',d=document,l=d.location,c=d.cookie;
+  if(l.search.indexOf('utm_expid='+k)>0)return;
+  function f(n){if(c){var i=c.indexOf(n+'=');if(i>-1){var j=c.
+  indexOf(';',i);return escape(c.substring(i+n.length+1,j<0?c.
+  length:j))}}}var x=f('__utmx'),xx=f('__utmxx'),h=l.hash;d.write(
+  '<sc'+'ript src="'+'http'+(l.protocol=='https:'?'s://ssl':
+  '://www')+'.google-analytics.com/ga_exp.js?'+'utmxkey='+k+
+  '&utmx='+(x?x:'')+'&utmxx='+(xx?xx:'')+'&utmxtime='+new Date().
+  valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
+  '" type="text/javascript" charset="utf-8"><\/sc'+'ript>')})();
+  </script><script>utmx('url','A/B');</script>
+  <!-- End of Google Analytics Content Experiment code -->
+
+
   <meta charset="utf-8">
   <title>Timekeeper (Version B) - Homescreen</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -84,8 +100,8 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-48623566-3', 'timekeeper-b.herokuapp.com');
-  //ga('create', 'UA-48623566-3', {'cookieDomain' : 'none'});
+  ga('create', 'UA-48623566-1', 'timekeeper-b.herokuapp.com');
+  //ga('create', 'UA-48623566-1', {'cookieDomain' : 'none'});
   ga('send', 'pageview');
 
   </script>
